--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FemeninaFem</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 
-<body >
+<body>
     <header>
         <nav id="inicio">
             <ul class="navBar__list_contain">
@@ -34,25 +35,47 @@
         </nav>
     </header>
 
-    <main >
+    <main>
         <div class="contentText">
             <h1 class="title">Femenina Fem</h1>
             <h2>Glitter Bar</h2>
-            <img src="./img/IMG-20210802-WA0030.jpg" atl='logo' width="200px" height="200px" />
+            <img src="./img/logoFemenina.jpg" atl='logo' width="200px" height="200px" />
             <h3>
                 Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</h3>
             <h3> donde los brillos son los protagonistas, ideal para remplazar o resaltar el cotillón de tu fiesta.
             </h3>
         </div>
 
-        <figure class="contentImg">
-            <img class="contentImg_gemas" src="./img/IMG-20220228-WA0001.jpg" alt="Gemas">
-            <iframe class="contentImg_video" src="https://www.youtube.com/embed/WCrQ1xbBmw4" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <figure>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/img1.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/img2.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/img3.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/img4.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/img5.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </figure>
-            
+
 
     </main>
 
@@ -65,10 +88,16 @@
                 <img class="footer__redes" src="./img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
-                <button> ir a inicio </button>
+                <button type="button" class="btn btn-primary">ir a inicio</button>
             </a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+
 
 </body>
 
