--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
@@ -35,16 +36,26 @@
     </header>
 
       <div class="formContac">
-          <label>Nombre y apellido</label> <input /> 
-          <label>Numero de telefono</label>  <input /> 
-          <label>Dia del evento</label>  <input type="date" />
-          <label>Lugar del evento</label> <input /> 
-          <button class="formContac-button">Enviar</button>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Nombre y Apellido
+            </span>
+            <input type="text" class="form-control" placeholder="">
+          </div> 
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Numero de telefono
+            </span>
+            <input type="text" class="form-control" >
+          </div> 
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">Dia del evento
+            </span>
+            <input type="date" class="form-control">
+          </div> 
+          <button type="button" class="btn btn-primary" id="btn-contacto">Enviar</button>
 
       </div>
         
      
-   
     <footer>
         <div class="footerContain">
             <a href="https://www.instagram.com/femenina.fem/">
@@ -54,10 +65,13 @@
                 <img class="footer__redes" src="../img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
-                <button> ir a inicio </button>
+                <button type="button" class="btn btn-primary">ir a inicio</button>
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 
 </body>
 
