--- a/secciones/nosotras.html
+++ b/secciones/nosotras.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
@@ -35,21 +36,15 @@
     </header>
     <main class="contain_body">
 
-        <h1>Femenina Fem</h1>
+        <h1 id="femenina">Femenina Fem</h1>
 
-        <h2>¿Quienes somos?</h2>
-        <p>Somos Cami y Maca</p>
-        <p>Nuestro emprendimiento se llama femenina fem.</p>
-        <p>Nos dedicamos a la venta de accesorios, y servicio de Glitter Bar</p>
-        <p>Por el momento tenemos shworoom, y realizamos ferias en distitos,</p>
-        <p>puntos de la provincia.</p>
-        <h3>¿Que es el Glitter Bar?</h3>
+        <h2 id="glitter">¿Que es el Glitter Bar?</h2>
         <p>Es un servio, pensado para todo tipo de eventos.</p>
-        <p>Le damos un toque de glamour a tu fiesta, llenando a los invitados de brillos.</p>
+        <p>Le damos un toque de glamour a tu fiesta llenando a los invitados de brillos.</p>
         <p>Sin importar la edad, ni el sexo.</p>
         <P>¡Disfruta esta nueva tendencia!</P>
 
-        <img class="imagFest" src="../img/281333226_2269071426564189_4738027689514899363_n.jpg" alt="">
+        <img class="imagFest" src="../img/nosotras.jpg" alt="">
 
     </main>
 
@@ -63,10 +58,13 @@
                 <img class="footer__redes" src="../img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
-                <button> ir a inicio </button>
+                <button type="button" class="btn btn-primary">ir a inicio</button>
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 
 </body>
 
