--- a/secciones/reservas.html
+++ b/secciones/reservas.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
@@ -34,7 +35,7 @@
         </nav>
     </header>
     <main class="contain_body">
-            <h1>Reservas:</h1>
+            <h1 id="femeninaTres">Reservas:</h1>
 
             <p>Podes reservar tu envento con una seña del 50%</p>
             <p>Es importante reservar con tiempo debido a la cantida de demanda.</p>
@@ -42,7 +43,32 @@
             <p>Podes abonar de manera semanal, mensual o la totalidad del evento el mismo dia.</p>
             <p>Aceptamos todos los medias de pago: Efectivo, trasferencia, tarjeas.</p>
 
-        <img class="reservas_img" src="../img/274877282_480388477025519_8556343943670329421_n.webp" alt="">
+            <figure>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../img/reserva1.jpg" class="d-block w-300" width="300" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/reserva2.jpg" class="d-block w-300" width="300" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/reserva3.jpg" class="d-block w-300" width="300" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../img/reseva5.jpg" class="d-block w-300" width="300" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </figure>
     </main>
     
     <footer>
@@ -54,10 +80,15 @@
                 <img class="footer__redes" src="../img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
-                <button> ir a inicio </button>
+                <button type="button" class="btn btn-primary">ir a inicio</button>
             </a>
         </div>
+
+      
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 
 </body>
 
