--- a/secciones/servicio.html
+++ b/secciones/servicio.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>servicio</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
@@ -35,7 +38,7 @@
     </header>
     <main class="contain_body">
         <section >
-            <h1>Servicio Glitter Bar</h1>
+            <h1 id="femeninaDos">Servicio Glitter Bar</h1>
             <h2>¿Que incluye?</h2>
             <div class="contain_body_imgs">
             <img class="contain_body_img" src="../img/271810665_295703439274917_8471753596784493855_n.jpg" alt="">
@@ -54,22 +57,53 @@
             <p>Espejo led profesional de makeup.</p>
             <p>Aro led de 2mts.</p>
         </section>
+
+        <figure>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../img/servicio1.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/servicio2.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/servicio3.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/servicio4.jpg" class="d-block w-300" width="300" alt="...">
+                  </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </figure>
+
     </main>
 
 
     <footer>
         <div class="footerContain">
-            <a href="https://www.instagram.com/femenina.fem/">
                 <img class="footer__redes" src="../img/instagram-logo.png" alt='not found' />
             </a>
             <a href="https://wa.me/543815170065">
                 <img class="footer__redes" src="../img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
-                <button> ir a inicio </button>
+                <button type="button" class="btn btn-primary">ir a inicio</button>
             </a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+</script>
 
 </body>
 
