--- a/index.html
+++ b/index.html
@@ -13,35 +13,42 @@
 
 <body>
     <header>
-        <nav id="inicio">
-            <ul class="navBar__list_contain">
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="index.html">Inicio</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="./secciones/nosotras.html">Nosotras</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="./secciones/servicio.html">Servicio</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="./secciones/reservas.html">Reservas</a>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="./secciones/contacto.html">Contacto</a>
-                </li>
-            </ul>
-
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <img src="./img/logoFemenina.jpg" atl='logo' width="100px" height="100px" /></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/nosotras.html">Nosotras</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/servicio.html">Servicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/reservas.html">Reservas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./secciones/contacto.html">Conctacto</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-        </nav>
+          </nav>
+
     </header>
 
     <main>
         <div class="contentText">
             <h1 class="title">Femenina Fem</h1>
             <h2>Glitter Bar</h2>
-            <img src="./img/logoFemenina.jpg" atl='logo' width="200px" height="200px" />
-            <h3>
-                Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</h3>
+        
+            <h3>Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</h3>
             <h3> donde los brillos son los protagonistas, ideal para remplazar o resaltar el cotillón de tu fiesta.
             </h3>
         </div>
