--- a/secciones/reservas.html
+++ b/secciones/reservas.html
@@ -13,26 +13,33 @@
 
 <body>
     <header>
-        <nav id="inicio">
-            <ul class="navBar__list_contain">
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="../index.html">Inicio</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="nosotras.html">Nosotras</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="servicio.html">Servicio</a>
-                </li>
-                <li class="navBar__contain">
-                    <a class="navBar__link" href="reservas.html">Reservas</a>
-                    <li class="navBar__contain">
-                        <a class="navBar__link" id="navBar_contacto" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-                
-                 </div>
-        </nav>
+      <nav id="inicio" class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <img src="../img/logoFemenina.jpg" atl='logo' width="100px" height="100px" /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./nosotras.html">Nosotras</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./servicio.html">Servicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./reservas.html">Reservas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Conctacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main class="contain_body">
             <h1 id="femeninaTres">Reservas:</h1>
