--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>FemeninaFem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./estilos/estilos.css">
+    <link rel="stylesheet" href="./style/styles.css">
 </head>
 
 <body>
@@ -25,16 +25,16 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/nosotras.html">Nosotras</a>
+                    <a class="nav-link" href="./secciones/nosotras/nosotras.html">Nosotras</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/servicio.html">Servicio</a>
+                    <a class="nav-link" href="./secciones/servicios/servicio.html">Servicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/reservas.html">Reservas</a>
+                    <a class="nav-link" href="./secciones/reservas/reservas.html">Reservas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./secciones/contacto.html">Conctacto</a>
+                    <a class="nav-link" href="./secciones/contacto/contacto.html">Conctacto</a>
                   </li>
                 </ul>
               </div>
@@ -42,34 +42,31 @@
           </nav>
 
     </header>
-
-    <main>
-        <div class="contentText">
-            <h1 class="title">Femenina Fem</h1>
+    
+<main>
+      <div class="contentText">
+            <h1>Femenina Fem</h1>
             <h2>Glitter Bar</h2>
-        
-            <h3>Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</h3>
-            <h3> donde los brillos son los protagonistas, ideal para remplazar o resaltar el cotillón de tu fiesta.
-            </h3>
+            <p>Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</p>
+            <p> donde los brillos son los protagonistas, ideal para remplazar o resaltar el cotillón de tu fiesta.</p>
         </div>
-
         <figure>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/img1.jpg" class="d-block w-300" width="300" alt="...">
+                    <img src="./img/img1.jpg" class="d-block w-500" width="500" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/img2.jpg" class="d-block w-300" width="300" alt="...">
+                    <img src="./img/img2.jpg" class="d-block w-500" width="500" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/img3.jpg" class="d-block w-300" width="300" alt="...">
+                    <img src="./img/img3.jpg" class="d-block w-500" width="500" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/img4.jpg" class="d-block w-300" width="300" alt="...">
+                    <img src="./img/img4.jpg" class="d-block w-500" width="500" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/img5.jpg" class="d-block w-300" width="300" alt="...">
+                    <img src="./img/img5.jpg" class="d-block w-500" width="500" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -82,17 +79,15 @@
                 </button>
               </div>
         </figure>
-
-
-    </main>
+</main>
 
     <footer>
         <div class="footerContain">
             <a href="https://www.instagram.com/femenina.fem/">
-                <img class="footer__redes" src="./img/instagram-logo.png" alt='not found' />
+                <img src="./img/instagram-logo.png" alt='not found' />
             </a>
             <a href="https://wa.me/543815170065">
-                <img class="footer__redes" src="./img/whatsapp-logo-1.png" alt="not found" />
+                <img src="./img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
                 <button type="button" class="btn btn-primary">ir a inicio</button>
