--- a/secciones/reservas/reservas.html
+++ b/secciones/reservas/reservas.html
@@ -8,62 +8,63 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../../style/styles.css">
 </head>
 
 <body>
     <header>
       <nav id="inicio" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <img src="../img/logoFemenina.jpg" atl='logo' width="100px" height="100px" /></a>
+          <img src="../../img/logoFemenina.jpg" atl='logo' width="100px" height="100px" /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./nosotras.html">Nosotras</a>
+                <a class="nav-link" href="../nosotras/nosotras.html">Nosotras</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./servicio.html">Servicio</a>
+                <a class="nav-link" href="../servicios/servicio.html">Servicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./reservas.html">Reservas</a>
+                <a class="nav-link" href="../reservas/reservas.html">Reservas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Conctacto</a>
+                <a class="nav-link" href="../contacto/contacto.html">Conctacto</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main class="contain_body">
-            <h1 id="femeninaTres">Reservas:</h1>
+    <main>
+      <div class="contentText">
 
+            <h1>Reservas</h1>
             <p>Podes reservar tu envento con una seña del 50%</p>
             <p>Es importante reservar con tiempo debido a la cantida de demanda.</p>
             <p>Ademas tenes la gran oportunidad de congelar el precio.</p>
             <p>Podes abonar de manera semanal, mensual o la totalidad del evento el mismo dia.</p>
             <p>Aceptamos todos los medias de pago: Efectivo, trasferencia, tarjeas.</p>
-
+      </div>
             <figure>
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="../img/reserva1.jpg" class="d-block w-300" width="300" alt="...">
+                        <img src="../../img/reserva1.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/reserva2.jpg" class="d-block w-300" width="300" alt="...">
+                        <img src="../../img/reserva2.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/reserva3.jpg" class="d-block w-300" width="300" alt="...">
+                        <img src="../../img/reserva3.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../img/reseva5.jpg" class="d-block w-300" width="300" alt="...">
+                        <img src="../../img/reseva5.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -81,10 +82,10 @@
     <footer>
         <div class="footerContain">
             <a href="https://www.instagram.com/femenina.fem/">
-                <img class="footer__redes" src="../img/instagram-logo.png" alt='not found' />
+                <img class="footer__redes" src="../../img/instagram-logo.png" alt='not found' />
             </a>
             <a href="https://wa.me/543815170065">
-                <img class="footer__redes" src="../img/whatsapp-logo-1.png" alt="not found" />
+                <img class="footer__redes" src="../../img/whatsapp-logo-1.png" alt="not found" />
             </a>
             <a href="#inicio">
                 <button type="button" class="btn btn-primary">ir a inicio</button>
