cambio de imagen

--- a/secciones/nosotras/nosotras.html
+++ b/secciones/nosotras/nosotras.html
@@ -51,7 +51,7 @@
         <p>Sin importar la edad, ni el sexo.</p>
         <P>¡Disfruta esta nueva tendencia!</P>
 
-        <img class="imagFest" src="../../img/nosotras.jpg" alt="">
+        <img src="../../img/nosotras.jpg" alt="">
       </div>
     </main>
 
