--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FemeninaFem</title>
+    <meta name="Servicio de glitter bar para todo tipo de eventos" content="Gemas">
+    <meta name="keywords" content="Fiesta, brillos, tendencia, gemas">
+    <title>Glitter Bar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/styles.css">
@@ -49,7 +51,11 @@
             <h2>Glitter Bar</h2>
             <p>Junto a Femenina te invitamos a que tengas una experiencia única y divertida,</p>
             <p> donde los brillos son los protagonistas, ideal para remplazar o resaltar el cotillón de tu fiesta.</p>
-        </div>
+            <p>El servicio esta pensado para todo tipo de eventos</p>
+            <p>Casamientos, Eventos infantiles, Cumpleaños, Fiestas de 15, Baby Shower, Despedidas, Egresados y mas.</p>
+       </div>
+            </div>
+            
         <figure>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
