--- a/secciones/nosotras/nosotras.html
+++ b/secciones/nosotras/nosotras.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta name="Reemplaza el cotillon de tu fiesta con brrillos" content="">
+    <meta name="keywords" content="Cotillon, neon, brillos, gemas ">
+    <title>Bar Glitter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../style/styles.css">
@@ -41,7 +43,7 @@
         </div>
       </nav>
     </header>
-    
+    <section>
     <main>
       <div class="contentText">
         <h1>Femenina Fem</h1>
@@ -50,11 +52,19 @@
         <p>Le damos un toque de glamour a tu fiesta llenando a los invitados de brillos.</p>
         <p>Sin importar la edad, ni el sexo.</p>
         <P>¡Disfruta esta nueva tendencia!</P>
-
         <img src="../../img/nosotras.jpg" alt="">
       </div>
     </main>
-
+    <p class="lorem-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere incidunt alias eius magni doloremque dicta numquam harum, obcaecati sint iusto. Eum sit impedit molestiae illum delectus aliquam cum laudantium quaerat modi aspernatur.</p>
+    <p class="lorem-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere incidunt alias eius magni doloremque dicta numquam harum, obcaecati sint iusto. Eum sit impedit molestiae illum delectus aliquam cum laudantium quaerat modi aspernatur.</p>
+    <p class="lorem-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere incidunt alias eius magni doloremque dicta numquam harum, obcaecati sint iusto. Eum sit impedit molestiae illum delectus aliquam cum laudantium quaerat modi aspernatur.</p>
+    <p class="lorem-4" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere incidunt alias eius magni doloremque dicta numquam harum, obcaecati sint iusto. Eum sit impedit molestiae illum delectus aliquam cum laudantium quaerat modi aspernatur.</p>
+    <div class="prueba">
+      <button class="button-prueba">Aceptar</button>
+      <button class="button-prueba-cancelar">Cancelar</button>
+      <button class="button-prueba-informacion">Informacion 🔍</button>
+    </div>
+  </section>
 
     <footer>
       <div class="footerContain">
