--- a/secciones/servicios/servicio.html
+++ b/secciones/servicios/servicio.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>servicio</title>
+  <meta name="Estallamos tu fiesta de brillos" content="">
+  <meta name="keywords" content="Casamiento, cumpleaños, recibida, despedida">
+  <title>Servcio de Glitter</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -66,10 +68,10 @@
             <img src="../../img/servicio2.jpg" class="d-block w-500" width="500" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../../img/servicio3.jpg" class="d-block w-500" width="500" alt="...">
+            <img src="../../img/servicio3.jpg" class="d-block w-530" width="530" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../../img/servicio4.jpg" class="d-block w-300" width="300" alt="...">
+            <img src="../../img/servicio4.jpg" class="d-block w-500" width="500" alt="...">
           </div>
 
         </div>
