--- a/secciones/reservas/reservas.html
+++ b/secciones/reservas/reservas.html
@@ -66,7 +66,7 @@
                         <img src="../../img/reserva3.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="../../img/reseva5.jpg" class="d-block w-500" width="500" alt="...">
+                        <img src="../../img/reserva4.jpg" class="d-block w-500" width="500" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
