--- a/secciones/nosotras/nosotras.html
+++ b/secciones/nosotras/nosotras.html
@@ -44,16 +44,22 @@
       </nav>
     </header>
     <section>
-    <main>
+    <main id="containNosotras">
       <div class="contentText">
-        <h1>Femenina Fem</h1>
-        <h2>¿Que es el Glitter Bar?</h2>
-        <p>Es un servio, pensado para todo tipo de eventos.</p>
-        <p>Le damos un toque de glamour a tu fiesta llenando a los invitados de brillos.</p>
-        <p>Sin importar la edad, ni el sexo.</p>
-        <P>¡Disfruta esta nueva tendencia!</P>
+        <h1>Conocenos</h1>
+        <p>Este empredimiento surgio con la idea de hacer brillar tus fiestas</p>
+        <p>y que los festejados puedan brillar tanto como la emocion del momento vivido</p>
+        <p>tuvimos la magica experiencia de llevar alegria y brillo a los eventos que asistimos</p>
+        <P>¡Nos encanta pensar que evento donde somos contratadas dejalos un poco de brillo en sus corazones!</P>
       </div>
-      <img src="../../img/nosotras.jpg" alt="">
+      <div class="nosotrasImg">
+        <img src="../../img/nosotras.jpg" alt="">
+        <img src="../../img/nosotras2.jpg" alt="">
+        <img src="../../img/nosotras3.jpg" alt="">
+        <img src="../../img/nosotras4.jpg" alt="">
+        <img src="../../img/nosotras5.jpg" alt="">
+        <img src="../../img/nosotras6.jpg" alt="">
+      </div>
     </main>
   </section>
 
