--- a/secciones/servicios/servicio.html
+++ b/secciones/servicios/servicio.html
@@ -46,17 +46,22 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="containServicio" >
     <div class="contentText">
       <h1>Servicio Glitter Bar</h1>
-      <p style="font-size: 20px;">Materiales hipoalergénicos de excelente, calidad, fácil lavado y no maltratan la piel.<br /> Hechos a base gel
-        con los mas hermosos aromas que podes encontrar, con un amplio stock de colores y brillos, 
-        <br/>ademas de contar con
-        tatuajes hechos de glitter.<br />
-        Tambien se ofrecen a los invitados la opcion de usar gemas de diversos colores.<br /> Para el festejado o
-        festejados ofrecen un tocado de gemas exclusivo para el centro de atención de la fiesta. <br /> El servicio
-        incluye 2 maquilladoras, espejo profecional, aro led con 3 tonos de luces calidas
-      </p>
+      <ul class="servicioList">
+        <li><p> Materiales hipoalergénicos importados de excelente, calidad, <br /> fácil lavado y que no maltratan la piel</p></li>
+        <li><p>Amplia gama de texturas y colores.</p></li>
+        <li><p>Variedad de gemas, pintura en colores neón y strass</p></li>
+        <li><p>Glitter ilimitado para todos los invitados</p></li>
+        <li><p>Espejo led profesional de makeup</p></li>
+        <li><p>Cartel luminoso</p></li>
+        <li><p>Luces para ambientar</p></li>
+      </ul>
+      <div>
+       <h3>🕒 Duración:</h3>
+       <h4>2hs. aproximadamente. Dependiendo de la cantidad de invitados se puede extender.</h4>
+      </div>
     </div>
     <figure>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
